--- a/views/play.erb
+++ b/views/play.erb
@@ -1,1 +1,3 @@
 <h1><%= @player_1_name %> vs. <%= @player_2_name %></h1>
+<h3><%= @player_2_name %>: <%= @hit_points  %> Hit points </h3>
+<button type='button' action="/attack" method ="post"> ATTACK. </button>
