added attack functionality

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,1 +1,2 @@
 <h4><%= @player_1_name %> attacked <%= @player_2_name %> :( </h4>
+<h4><%= @player_2_name %> <%= $player_2.hit_points %> hit points </h4>
