--- a/views/play.erb
+++ b/views/play.erb
@@ -1,5 +1,5 @@
 <h1><%= @player_1_name %> vs. <%= @player_2_name %></h1>
-<h3><%= @player_2_name %>: <%= @hit_points  %> Hit points </h3>
+<h3><%= @player_2_name %>: <%= $player_2.hit_points  %> Hit points </h3>
 
 <form action="/attack" method ="post">
 <input type="submit" value ='ATTACK.'>
