--- a/views/play.erb
+++ b/views/play.erb
@@ -1,5 +1,5 @@
-<h1><%= @player_1_name %> vs. <%= @player_2_name %></h1>
-<h3><%= @player_2_name %>: <%= $player_2.hit_points  %> Hit points </h3>
+<h1><%= @game.player_1.name %> vs. <%= @game.player_2.name %></h1>
+<h3><%= @game.player_2.name %>: <%= @game.player_2.hit_points  %> Hit points </h3>
 
 <form action="/attack" method ="post">
 <input type="submit" value ='ATTACK.'>
