--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,2 +1,6 @@
 <h4><%= @game.player_1.name %> attacked <%= @game.player_2.name %> :( </h4>
 <h4><%= @game.player_2.name %> <%= @game.player_2.hit_points %> hit points </h4>
+
+<form action="switch" method="get" >
+  <input type="submit" value="End Turn">
+</form>
