--- a/views/play.erb
+++ b/views/play.erb
@@ -1,9 +1,12 @@
-<h1><%= @game.player_1.name %> vs. <%= @game.player_2.name %></h1>
-<h3><%= @game.player_1.name %>: <%= @game.player_1.hit_points  %> Hit points </h3>
-<h3><%= @game.player_2.name %>: <%= @game.player_2.hit_points  %> Hit points </h3>
+<h1><%=@game.player_1.name%> vs. <%=@game.player_2.name%></h1>
 
-<h3>It's <%=@game.current_player.name%>'s turn</h3>
+<h4>Current Score</h4>
+<h4><%=@game.player_1.name%> : <%=@game.player_1.hit_points %> Hit points</h4>
+<h4><%=@game.player_2.name%> : <%=@game.player_2.hit_points %> Hit points</h4>
 
+<h2>It's <%=@game.current_player.name%>'s turn</h2>
+
+<h4>Actions Available:</h4>
 <form action="/attack" method ="post">
-<input type="submit" value ='ATTACK.'>
+<input type="submit" value ='ATTACK'>
 </form>
