Game over enabled

--- a/views/play.erb
+++ b/views/play.erb
@@ -4,9 +4,16 @@
 <h4><%=@game.player_1.name%> : <%=@game.player_1.hit_points %> Hit points</h4>
 <h4><%=@game.player_2.name%> : <%=@game.player_2.hit_points %> Hit points</h4>
 
-<h2>It's <%=@game.current_player.name%>'s turn</h2>
+<% unless @game.over? %>
+  <h2>It's <%=@game.current_player.name%>'s turn</h2>
 
-<h4>Actions Available:</h4>
-<form action="/attack" method ="post">
-<input type="submit" value ='ATTACK'>
-</form>
+  <h4>Actions Available:</h4>
+  <form action="/attack" method ="post">
+  <input type="submit" value ='ATTACK'>
+  </form>
+<% end %>
+
+<% if @game.over? %>
+<h1>GAME OVER<h1>
+  <h2>The winner is <%= @game.opponent.name %>!!!<h2>
+<% end %>
