--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,22 @@
-<form action="/names" method ="post">
-  <input type="text" name="player_1_name">
-  <input type="text" name="player_2_name">
-  <input type="submit" value="Submit">
-</form>
+
+<link rel="stylesheet" type="text/css" href="index.css" />
+
+<body>
+  <center>
+    <form action="/names" method ="post">
+      <br>
+      <img src="https://upload.wikimedia.org/wikipedia/en/7/72/AdventureTimeBattlePartyLogo.png"/>
+      <br>
+      <br>
+      <label for="player_1_name" id="name_label">PLAYER 1</label >
+      <input type="text" id="player_1_name" name="player_1_name" >
+      <label for="player_2_name" id="name_label">PLAYER 2</label>
+      <input type="text" id="player_2_name" name="player_2_name">
+      <br>
+      <br>
+      <br>
+      <br>
+      <input type="submit" value="START" style="color: red;">
+    </form>
+  </center>
+</body>
