--- a/public/play.css
+++ b/public/play.css
@@ -11,7 +11,7 @@ input[type=submit] {
   -webkit-border-radius: 28;
   -moz-border-radius: 28;
   border-radius: 28px;
-  font-family: CFEngraved-Regular;
+  font-family: Architects Daughter;
   color: #f52929;
   font-size: 38px;
   background: #f5ed51;
