--- a/views/index.erb
+++ b/views/index.erb
@@ -1,11 +1,17 @@
-
-<link rel="stylesheet" type="text/css" href="index.css" />
+<head>
+  <link rel="stylesheet" type="text/css" href="index.css" />
+  <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="animations.css">
+</head>
 
 <body>
   <center>
     <form action="/names" method ="post">
       <br>
-      <img src="https://upload.wikimedia.org/wikipedia/en/7/72/AdventureTimeBattlePartyLogo.png"/>
+        <div id="badge" class="floating">
+          <img src="https://upload.wikimedia.org/wikipedia/en/7/72/AdventureTimeBattlePartyLogo.png"/>
+        </div>
       <br>
       <br>
       <label for="player_1_name" id="name_label">PLAYER 1</label >
