--- a/public/index.css
+++ b/public/index.css
@@ -10,7 +10,7 @@ input[type=submit] {
   -webkit-border-radius: 28;
   -moz-border-radius: 28;
   border-radius: 28px;
-  font-family: CFEngraved-Regular;
+  font-family: Architects Daughter;
   color: #f52929;
   font-size: 38px;
   background: #f5ed51;
@@ -24,7 +24,7 @@ input[type=submit]:hover {
 }
 
 label[id=name_label] {
-  font-family: CFEngraved-Regular;
+  font-family: Architects Daughter;
   font-size: 30;
   color: #f52929
 }
