--- a/views/play.erb
+++ b/views/play.erb
@@ -1,6 +1,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="play.css" />
   <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
